--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^2.12.2",
+    "codemirror": "5.35.0",
+    "csv": "2.0.0",
     "dexie": "^1.5.1",
     "event-emitter": "^0.3.5",
+    "file-saver": "1.3.3",
     "jquery": "^3.2.1",
+    "jszip": "3.1.5",
+    "keysim": "2.0.0",
     "lodash.isequal": "^4.5.0",
     "parse-json": "^2.2.0",
     "react": "^15.6.1",
+    "react-click-outside": "github:tj/react-click-outside",
+    "react-codemirror2": "4.0.1",
     "react-dom": "^15.6.1",
+    "react-onclickoutside": "6.7.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
