--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.config.js",
     "ext": "cross-env NODE_ENV=development webpack --watch --progress --hide-modules --config webpack.prod.config.js",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.config.js"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.config.js",
+    "release": "npm run build && release-it --config .release.json"
   },
   "author": "",
   "license": "ISC",
+  "private": true,
   "dependencies": {
     "antd": "^2.12.2",
     "codemirror": "5.35.0",
@@ -46,6 +48,7 @@
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.2",
+    "crx": "3.2.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.2.0",
     "eslint-config-standard": "^10.2.1",
@@ -59,6 +62,7 @@
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "next",
+    "release-it": "7.2.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "svg-react-loader": "^0.4.4",
